# nautobot-plugin-chatops-ansible

./: .bandit.yml  .gitignore  .pydocstyle.ini  .travis.yml  README.md  creds.env.example  default.nix  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
development/: Dockerfile  base_configuration.py  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.docs.yml  docker-compose.yml  nautobot_config.py
development/nautobot_main/: configuration.py
nautobot_chatops_ansible/: __init__.py  tower.py  worker.py
nautobot_chatops_ansible/tests/: __init__.py  test_tower.py
nautobot_chatops_ansible/tests/fixtures/: 01_get_inventories.json
nautobot_chatops_extension_ansible/: __init__.py
nautobot_chatops_extension_ansible/tests/: __init__.py  test_tower.py
nautobot_plugin_chatops_ansible/: __init__.py  tower.py  worker.py
netbox_nautobot_ansible/: __init__.py  worker.py
netbox_nautobot_ansible/tests/: __init__.py
