[tool.poetry]
name = "ntc-netbox-plugin-nautobot-ansible"
version = "0.2.0"
description = "NetBox Nautobot Ansible Tower integration"
authors = ["Network to Code, LLC <info@networktocode.com>"]

readme = "README.md"
homepage = "https://github.com/networktocode-llc/ntc-netbox-plugin-nautobot-ansible"
repository = "https://github.com/networktocode-llc/ntc-netbox-plugin-nautobot-ansible"
keywords = ["netbox", "netbox-plugin"]
include = [
    "README.md",
]
packages = [
    { include = "netbox_nautobot_ansible" },
]

[tool.poetry.plugins."nautobot.workers"]
"ansible" = "netbox_nautobot_ansible.worker:ansible"

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.4.1"
netbox-nautobot = {path = "packages/netbox_nautobot-0.2.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
yamllint = "^1.23.0"
bandit = "^1.6.2"
pylint = "^2.5.2"
pylint-django = "^2.0.15"
pydocstyle = "^5.0.2"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

