[tool.poetry]
name = "nautobot-chatops-ansible"
version = "1.0.2"
description = "Nautobot Chatpops Ansible Tower integration"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]

readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-chatops-ansible"
repository = "https://github.com/nautobot/nautobot-plugin-chatops-ansible"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "README.md",
]
packages = [
    { include = "nautobot_chatops_ansible" },
]

[tool.poetry.plugins."nautobot.workers"]
"ansible" = "nautobot_chatops_ansible.worker:ansible"

[tool.poetry.dependencies]
python = "^3.6"
nautobot-chatops = "^1.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bandit = "^1.7.0"
coverage = "~5.4"
invoke = "^1.4.1"
pylint = "^2.5.2"
pylint-django = "^2.0.15"
pydocstyle = "^5.0.2"
requests-mock = "^1.9.3"
yamllint = "^1.23.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """
    line-too-long,
    bad-continuation,
    too-few-public-methods,
    too-many-ancestors,
    too-many-instance-attributes,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """
